--- a/cecs550/Finished - Bayes.py.ipynb
+++ b/cecs550/Finished - Bayes.py.ipynb
@@ -305,8 +305,8 @@
     "                    # print(\"mean: \", mu[indx[nextIdx]][possibilities[l][1]])\n",
     "                    # print(\"X: \", X[k][i][j])\n",
     "\n",
-    "                    multivarDist2 = 1. /(np.sqrt(2 * np.pi) * variance[indx[nextIdx]][possibilities[l][0]]) * \\\n",
-    "                                    np.exp(-0.5 * ((X[k][i][j] - mu[indx[nextIdx]][possibilities[l][0]])/variance[indx[nextIdx]][possibilities[i][0]]) ** 2) * omega[k]\n",
+    "                    multivarDist2 = 1. /(np.sqrt(2 * np.pi) * variance[indx[nextIdx]][possibilities[l][1]]) * \\\n",
+    "                                    np.exp(-0.5 * ((X[k][i][j] - mu[indx[nextIdx]][possibilities[l][1]])/variance[indx[nextIdx]][possibilities[i][1]]) ** 2) * omega[k]\n",
     "\n",
     "                    # print(\"dist2: \", multivarDist2)\n",
     "                    counter+=1\n",
@@ -485,6 +485,11 @@
     "        # print(\"X_norm: \", X_norm[k])\n",
     "        # print(\"X_test: \", X_test[k])\n",
     "        bayes[k] = (np.multiply(X_norm[k], omega[k[1]])/X_test[k])\n",
+    "        # print(\"\\n\\n\")\n",
+    "\n",
+    "    print(\"Bayes: \", bayes)\n",
+    "    for k,v in bayes.items():\n",
+    "        bayes[k] = np.array([np.product(v)])\n",
     "\n",
     "    return bayes\n",
     "\n",
@@ -525,27 +530,84 @@
     "\n",
     "    return returnErrorX\n",
     "\n",
-    "# def determineError(bayesResult: dict):\n",
-    "#     tempWinnerOne = 0\n",
-    "#     tempWinnerTwo = 0\n",
-    "#     errorCounter = 0\n",
-    "#     tempValue = 0\n",
-    "#     tempValueTwo = 0\n",
-    "#\n",
-    "#     labels = set()\n",
-    "#\n",
-    "#     for k, v in bayesResult.items():\n",
-    "#         labels.add(k[1])\n",
-    "#\n",
-    "#     for k, v in bayesResult.items():\n",
-    "#         tempValue = v\n",
-    "#\n",
-    "#         if labels.index(k) + 1 != len(labels):\n",
-    "#             nextIdx = labels.index(k) + 1\n",
-    "#         else:\n",
-    "#             nextIdx = labels.index(k)\n",
-    "#\n",
-    "#         tempValueTwo = labels[nextIdx]\n"
+    "def determineError(bayesResult: dict, labels):\n",
+    "    a = np.array([])\n",
+    "\n",
+    "    for k, v in bayesResult.items():\n",
+    "        a = np.append(a, np.array(v))\n",
+    "\n",
+    "    a = np.reshape(a, (3, 3))\n",
+    "\n",
+    "    dictTemp = {}\n",
+    "\n",
+    "    error = 0\n",
+    "    correct = 0\n",
+    "\n",
+    "    for i in range(len(a)):\n",
+    "        for k in range(len(a[i])):\n",
+    "            dictTemp[(i, k)] = a[i][k]\n",
+    "\n",
+    "    # print(dictTemp)\n",
+    "\n",
+    "    possibilities = [((0, 0),(1, 0)), ((0, 1), (1, 1)), ((0, 2), (1, 2)), ((0, 0), (2, 0)), ((0, 1), (2, 1)), ((0, 2), (2, 2)), ((1, 0), (2, 0)), ((1, 1), (2, 1)), ((1, 2), (2, 2))]\n",
+    "\n",
+    "    newDict = {}\n",
+    "\n",
+    "    for i in range(len(possibilities)):\n",
+    "        if dictTemp[possibilities[i][0]] > dictTemp[possibilities[i][1]]:\n",
+    "            # newDict[possibilities[i][0], (possibilities[i])] = dictTemp[possibilities[i][0]]\n",
+    "            newDict[possibilities[i]] = dictTemp[possibilities[i][0]]\n",
+    "        else:\n",
+    "            # newDict[possibilities[i][1], (possibilities[i])] = dictTemp[possibilities[i][1]]\n",
+    "            newDict[possibilities[i]] = dictTemp[possibilities[i][1]]\n",
+    "\n",
+    "    # print(newDict)\n",
+    "\n",
+    "    counter = 1\n",
+    "\n",
+    "    correct = 0\n",
+    "    error = 0\n",
+    "\n",
+    "    # tempList = set()\n",
+    "    # for ab in newDict.keys():\n",
+    "    #     temp = list(ab)\n",
+    "    #     # for a in range(len(temp)):\n",
+    "    #     #     tempList.add(temp[a])\n",
+    "    #\n",
+    "    # tempList = sorted(tempList)\n",
+    "    #\n",
+    "    # matrixTempList = [[tempList[0], tempList[1], tempList[2]],\n",
+    "    #                   [tempList[3], tempList[4], tempList[5]],\n",
+    "    #                   [tempList[6], tempList[7]], tempList[8]]\n",
+    "\n",
+    "    # print(matrixTempList)\n",
+    "\n",
+    "    comparisons = [((0, 0), (1, 0)), ((0, 1), (1, 1))], \\\n",
+    "                  [((0, 0), (1, 0)), ((0, 2), (1, 2))], \\\n",
+    "                  [((0, 1), (1, 1)), ((0, 2), (1, 2))], \\\n",
+    "                  [((0, 0), (2, 0)), ((0, 1), (2, 1))], \\\n",
+    "                  [((0, 0), (2, 0)), ((0, 2), (2, 2))], \\\n",
+    "                  [((0, 1), (2, 1)), ((0, 2), (2, 2))], \\\n",
+    "                  [((1, 0), (2, 0)), ((1, 1), (2, 1))], \\\n",
+    "                  [((1, 0), (2, 0)), ((1, 2), (2, 2))], \\\n",
+    "                  [((1, 1), (2, 1)), ((1, 2), (2, 2))]\n",
+    "\n",
+    "    counter = 1\n",
+    "\n",
+    "    for i in range(len(comparisons)):\n",
+    "        tempOne = comparisons[i][0]\n",
+    "        tempTwo = comparisons[i][1]\n",
+    "\n",
+    "        if newDict[tempOne] == newDict[tempTwo]:\n",
+    "           correct += 1\n",
+    "        else:\n",
+    "            error += 1\n",
+    "\n",
+    "    # print(\"error: \", error)\n",
+    "    # print(\"correct: \", correct)\n",
+    "\n",
+    "    error_percentage = (error / (error + correct)) * 100\n",
+    "    return error_percentage"
    ]
   },
   {
@@ -610,47 +672,49 @@
       "       [2.92582448],\n",
       "       [6.87657538]])} \n",
       "\n",
-      "Univariate:  {('w1', (0, 0)): array([0.00013179]), ('w1', (0, 1)): array([0.0001512]), ('w1', (0, 2)): array([0.00012156]), ('w1', (1, 0)): array([6.73814644e-05]), ('w1', (1, 1)): array([0.00011474]), ('w1', (1, 2)): array([0.00012353]), ('w1', (2, 0)): array([0.00010234]), ('w1', (2, 1)): array([7.03562449e-05]), ('w1', (2, 2)): array([5.23321798e-05]), ('w2', (0, 0)): array([5.91910483e-05]), ('w2', (0, 1)): array([6.23272048e-05]), ('w2', (0, 2)): array([0.00013794]), ('w2', (1, 0)): array([5.45903337e-05]), ('w2', (1, 1)): array([5.12112721e-05]), ('w2', (1, 2)): array([5.65352143e-05]), ('w2', (2, 0)): array([5.21369794e-05]), ('w2', (2, 1)): array([6.19262401e-05]), ('w2', (2, 2)): array([6.25193858e-05]), ('w3', (0, 0)): array([0.]), ('w3', (0, 1)): array([0.]), ('w3', (0, 2)): array([0.]), ('w3', (1, 0)): array([0.]), ('w3', (1, 1)): array([0.]), ('w3', (1, 2)): array([0.]), ('w3', (2, 0)): array([0.]), ('w3', (2, 1)): array([0.]), ('w3', (2, 2)): array([0.])} \n",
+      "Univariate:  {('w1', (0, 0)): array([0.00013575]), ('w1', (0, 1)): array([0.00014504]), ('w1', (0, 2)): array([0.00012656]), ('w1', (1, 0)): array([7.52697122e-05]), ('w1', (1, 1)): array([0.00012315]), ('w1', (1, 2)): array([0.0001308]), ('w1', (2, 0)): array([0.00011445]), ('w1', (2, 1)): array([8.23735865e-05]), ('w1', (2, 2)): array([6.32881098e-05]), ('w2', (0, 0)): array([9.13421888e-05]), ('w2', (0, 1)): array([0.00010452]), ('w2', (0, 2)): array([0.00011189]), ('w2', (1, 0)): array([0.00010315]), ('w2', (1, 1)): array([9.54018209e-05]), ('w2', (1, 2)): array([0.00010801]), ('w2', (2, 0)): array([0.0001029]), ('w2', (2, 1)): array([0.0001184]), ('w2', (2, 2)): array([0.00011827]), ('w3', (0, 0)): array([0.]), ('w3', (0, 1)): array([0.]), ('w3', (0, 2)): array([0.]), ('w3', (1, 0)): array([0.]), ('w3', (1, 1)): array([0.]), ('w3', (1, 2)): array([0.]), ('w3', (2, 0)): array([0.]), ('w3', (2, 1)): array([0.]), ('w3', (2, 2)): array([0.])} \n",
       "\n",
-      "X_normalDist:  {(0, 'w1'): array([[[1.31791053e-04],\n",
-      "        [6.73814644e-05],\n",
-      "        [1.02335743e-04]]]), (1, 'w1'): array([[[1.51199730e-04],\n",
-      "        [1.14742040e-04],\n",
-      "        [7.03562449e-05]]]), (2, 'w1'): array([[[1.21564866e-04],\n",
-      "        [1.23529484e-04],\n",
-      "        [5.23321798e-05]]]), (0, 'w2'): array([[[5.91910483e-05],\n",
-      "        [5.45903337e-05],\n",
-      "        [5.21369794e-05]]]), (1, 'w2'): array([[[6.23272048e-05],\n",
-      "        [5.12112721e-05],\n",
-      "        [6.19262401e-05]]]), (2, 'w2'): array([[[1.37944006e-04],\n",
-      "        [5.65352143e-05],\n",
-      "        [6.25193858e-05]]]), (0, 'w3'): array([[[0.],\n",
+      "X_normalDist:  {(0, 'w1'): array([[[1.35746521e-04],\n",
+      "        [7.52697122e-05],\n",
+      "        [1.14447250e-04]]]), (1, 'w1'): array([[[1.45043359e-04],\n",
+      "        [1.23153210e-04],\n",
+      "        [8.23735865e-05]]]), (2, 'w1'): array([[[1.26556711e-04],\n",
+      "        [1.30804035e-04],\n",
+      "        [6.32881098e-05]]]), (0, 'w2'): array([[[9.13421888e-05],\n",
+      "        [1.03146650e-04],\n",
+      "        [1.02902512e-04]]]), (1, 'w2'): array([[[1.04516624e-04],\n",
+      "        [9.54018209e-05],\n",
+      "        [1.18395587e-04]]]), (2, 'w2'): array([[[0.00011189],\n",
+      "        [0.00010801],\n",
+      "        [0.00011827]]]), (0, 'w3'): array([[[0.],\n",
       "        [0.],\n",
       "        [0.]]]), (1, 'w3'): array([[[0.],\n",
       "        [0.],\n",
       "        [0.]]]), (2, 'w3'): array([[[0.],\n",
       "        [0.],\n",
       "        [0.]]])}\n",
-      "Bayes:  {(0, 'w1'): array([[[-3.66086257e-05, -1.82031841e-05, -2.53444332e-05],\n",
-      "        [-1.87170734e-05, -9.30683210e-06, -1.29579739e-05],\n",
-      "        [-2.84265951e-05, -1.41347711e-05, -1.96799505e-05]]]), (1, 'w1'): array([[[-1.03561459e-04, -3.24462940e-05, -2.19130044e-05],\n",
-      "        [-7.85904387e-05, -2.46227555e-05, -1.66292812e-05],\n",
-      "        [-4.81892088e-05, -1.50979066e-05, -1.01965572e-05]]]), (2, 'w1'): array([[[-2.85363535e-05, -2.93634942e-05, -1.53490992e-05],\n",
-      "        [-2.89975313e-05, -2.98380395e-05, -1.55971570e-05],\n",
-      "        [-1.22845493e-05, -1.26406231e-05, -6.60759846e-06]]]), (0, 'w2'): array([[[-3.36312775e-05, -1.44368411e-05, -1.76163834e-05],\n",
-      "        [-3.10172351e-05, -1.33147155e-05, -1.62471231e-05],\n",
-      "        [-2.96232838e-05, -1.27163364e-05, -1.55169582e-05]]]), (1, 'w2'): array([[[-1.11298580e-04, -1.23665089e-05, -9.44351588e-05],\n",
-      "        [-9.14487002e-05, -1.01609667e-05, -7.75928365e-05],\n",
-      "        [-1.10582572e-04, -1.22869524e-05, -9.38276365e-05]]]), (2, 'w2'): array([[[ 5.70016552e-05, -4.03345045e-05, -2.55451862e-04],\n",
-      "        [ 2.33616588e-05, -1.65307644e-05, -1.04694841e-04],\n",
-      "        [ 2.58344569e-05, -1.82805222e-05, -1.15776640e-04]]]), (0, 'w3'): array([[[0., 0., 0.],\n",
+      "Bayes:  {(0, 'w1'): array([[[-3.77073670e-05, -1.87495195e-05, -2.61051002e-05],\n",
+      "        [-2.09082534e-05, -1.03963691e-05, -1.44749447e-05],\n",
+      "        [-3.17909027e-05, -1.58076312e-05, -2.20090865e-05]]]), (1, 'w1'): array([[[-9.93447664e-05, -3.11251843e-05, -2.10207767e-05],\n",
+      "        [-8.43515137e-05, -2.64277275e-05, -1.78482913e-05],\n",
+      "        [-5.64202647e-05, -1.76767353e-05, -1.19382009e-05]]]), (2, 'w1'): array([[[-2.97081482e-05, -3.05692540e-05, -1.59793828e-05],\n",
+      "        [-3.07051725e-05, -3.15951775e-05, -1.65156610e-05],\n",
+      "        [-1.48563638e-05, -1.52869830e-05, -7.99092295e-06]]]), (0, 'w2'): array([[[-5.18989709e-05, -2.22785826e-05, -2.71851752e-05],\n",
+      "        [-5.86060510e-05, -2.51577195e-05, -3.06984077e-05],\n",
+      "        [-5.84673363e-05, -2.50981736e-05, -3.06257476e-05]]]), (1, 'w2'): array([[[-1.86636828e-04, -2.07374253e-05, -1.58358521e-04],\n",
+      "        [-1.70360394e-04, -1.89289327e-05, -1.44548214e-04],\n",
+      "        [-2.11420690e-04, -2.34911878e-05, -1.79387252e-04]]]), (2, 'w2'): array([[[ 4.62343372e-05, -3.27155251e-05, -2.07198326e-04],\n",
+      "        [ 4.46323602e-05, -3.15819625e-05, -2.00019096e-04],\n",
+      "        [ 4.88707122e-05, -3.45810302e-05, -2.19013191e-04]]]), (0, 'w3'): array([[[0., 0., 0.],\n",
       "        [0., 0., 0.],\n",
       "        [0., 0., 0.]]]), (1, 'w3'): array([[[0., 0., 0.],\n",
       "        [0., 0., 0.],\n",
       "        [0., 0., 0.]]]), (2, 'w3'): array([[[-0.,  0.,  0.],\n",
       "        [-0.,  0.,  0.],\n",
-      "        [-0.,  0.,  0.]]])} \n",
-      "\n"
+      "        [-0.,  0.,  0.]]])}\n",
+      "Bayes:  {(0, 'w1'): array([-6.42287903e-43]), (1, 'w1'): array([-3.07915173e-41]), (2, 'w1'): array([-4.21968445e-43]), (0, 'w2'): array([-6.39366894e-41]), (1, 'w2'): array([-2.54533619e-37]), (2, 'w2'): array([3.27055961e-38]), (0, 'w3'): array([0.]), (1, 'w3'): array([0.]), (2, 'w3'): array([-0.])} \n",
+      "\n",
+      "Error: 55.56% \n"
      ]
     }
    ],
@@ -688,6 +752,7 @@
     "# print(covarianceMatrixDeriv)\n",
     "\n",
     "omega = {'w1': 0.5, 'w2': 0.5, 'w3': 0}\n",
+    "labels = list(colDict_test)\n",
     "\n",
     "univariate = calc_UnivariateDistribution(colDict_test, mean, 3, covariance, omega)\n",
     "print(\"Univariate: \", univariate, \"\\n\")\n",
@@ -698,8 +763,8 @@
     "bayes = calc_bayes(X_test, X_norm, omega)\n",
     "print(\"Bayes: \", bayes, \"\\n\")\n",
     "\n",
-    "# error = determineError(bayes)\n",
-    "# print(\"Error: \", error)\n",
+    "error = determineError(bayes, labels)\n",
+    "print(\"Error: {:1.2f}% \".format(error))\n",
     "\n",
     "# multivariate = calc_MultivariateDistribution(colDict_train, mean, covarianceMatrix, covarianceMatrixDeriv, 3, covariance, omega)\n",
     "# print(\"Multivariate: \", multivariate, \"\\n\")\n",
